--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -21,6 +21,14 @@ jobs:
         run: |
            python -m pip install --upgrade pip
            python -m pip install cibuildwheel==1.6.4
+         
+      - name:  Install
+        run:   |
+               if [ "$RUNNER_OS" == "Linux" ]; then
+                    apt update
+                    apt install gcc g++
+               fi
+        shell: bash
 
       - name: Build wheel
         run: python -m cibuildwheel --output-dir dist/
