--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -25,8 +25,8 @@ jobs:
       - name:  Install
         run:   |
                if [ "$RUNNER_OS" == "Linux" ]; then
-                    apt update
-                    apt install gcc g++
+                    sudo apt-get update
+                    sudo apt-get install gcc g++
                fi
         shell: bash
 
