--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -7,7 +7,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: ["3.9", "3.10"]
+        python-version: ["3.10"]
     steps:
       - uses: actions/checkout@v2
       - name: Checkout submodules
@@ -22,12 +22,6 @@ jobs:
         run: |
            python -m pip install --upgrade pip
            python -m pip install cibuildwheel==1.6.4
-
-      - name: Set up Clang
-        uses: egor-tensin/setup-clang@v1
-        with:
-          version: latest
-          platform: x64
          
       - name:  Install
         run:   |
@@ -36,6 +30,12 @@ jobs:
                     sudo apt-get install gcc g++
                fi
         shell: bash
+
+      - name: Macos clang
+        run: |
+          if [ "$RUNNER_OS" == "macOS" ]; then
+            sudo xcode-select -s /Applications/Xcode_12.5.app/Contents/Developer
+          fi
 
       - name: Build wheel
         run: python -m cibuildwheel --output-dir dist/
