--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -8,6 +8,8 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         python-version: ["3.10"]
+        xcode: [13.2]
+    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
       - name: Checkout submodules
@@ -31,12 +33,9 @@ jobs:
                fi
         shell: bash
 
-      - name: macOS clang
-        run: |
-          if [ "$RUNNER_OS" == "macOS" ]; then
-            sudo xcode-select -s /Applications/Xcode_12.4.app/Contents/Developer
-            clang -v
-          fi
+      - name: Change Xcode version to support clang99
+        if: matrix.os == 'macOS-latest'
+        run: sudo xcode-select -s /Applications/Xcode_${{ matrix.xcode-version }}.app/Contents/Developer
 
       - name: Build wheel
         run: python -m cibuildwheel --output-dir dist/
