--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -7,6 +7,7 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         python-version: ["3.10"]
+        xcode: [13.2]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
