--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -5,7 +5,8 @@ jobs:
   build_wheels:
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest,  windows-latest]
+        # os: [ubuntu-latest, macos-latest, windows-latest]
         python-version: ["3.10"]
         xcode: [13.2]
     runs-on: ${{ matrix.os }}
@@ -36,10 +37,11 @@ jobs:
         if: runner.os == 'macOS'
         env:
           HOMEBREW_NO_AUTO_UPDATE: 1
+          CC: gcc-11
+          CXX: g++-11
         run: |
           brew update
           brew install gcc
-          export CC=gcc-11 CXX=g++-11
 
       - name: Build wheel
         run: python -m cibuildwheel --output-dir dist/
