--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -5,7 +5,7 @@ jobs:
   build_wheels:
     strategy:
       matrix:
-        os: [ubuntu-latest,  windows-latest]
+        os: [ubuntu-latest]
         # os: [ubuntu-latest, macos-latest, windows-latest]
         python-version: ["3.10"]
         xcode: [13.2]
