--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -8,12 +8,7 @@ jobs:
         os: [ubuntu-latest, windows-2022]
         # os: [ubuntu-latest, macos-latest, windows-latest]
         python-version: ["3.10"]
-        xcode: [13.2]
-        compiler:
-          - gcc
-        include:
-          - os: "windows-2022"
-            compiler: "msvc"
+        #xcode: [13.2]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
@@ -37,6 +32,12 @@ jobs:
                     sudo apt-get install gcc g++
                fi
         shell: bash
+
+      - name: Install dependencies
+        if: runner.os == 'windows'
+        run: |
+          Invoke-WebRequest -Uri https://aka.ms/vs/16/release/vs_buildtools.exe -OutFile vs_buildtools.exe
+          ./vs_buildtools.exe --quiet --wait --norestart --nocache --add Microsoft.VisualStudio.Component.VC.Tools.x86.x64 --add Microsoft.VisualStudio.Component.VC.v141.x86.x64 --add Microsoft.VisualStudio.Component.VC.140 --includeRecommended
 
       - name: Build wheel
         run: python -m cibuildwheel --output-dir dist/
